--- a/abbr.tex
+++ b/abbr.tex
@@ -10,6 +10,18 @@
     class = abbrev
 }
 
+\DeclareAcronym{SPD}{
+    short = SPD,
+    long  = Sistema a Parâmetros Distribuídos,
+    class = abbrev
+}
+
+\DeclareAcronym{SPC}{
+    short = SPC,
+    long  = Sistema a Parâmetros Concentrados,
+    class = abbrev
+}
+
 \DeclareAcronym{AT}{
     short = \(A'\),
     long  = Transposta de uma matriz,
