--- a/bibliothek.bib
+++ b/bibliothek.bib
@@ -68,6 +68,12 @@
 	Url = {https://goo.gl/AHJff2},
 	Pages={4383-4388}}
 
+@article{article:cairano,
+	Author={S. Di Cairano},
+	Title={An Industry Perspective on MPC in Large Volumes Applications: Potential Benefits and Open Challenges},
+	Year={2012},
+	Url = {https://goo.gl/txgjKv}}
+
 @mastersthesis{masterthesis:nelson,
 	Author = {N. F. Barroso},
 	Date-Added = {2018-03-03 20:04:57 +0000},
