--- a/chapter2.tex
+++ b/chapter2.tex
@@ -2,7 +2,7 @@
 % !TeX encoding = UTF-8 Unicode
 
 \chapter{Objetivos}%
-\label{sec:objectives}
+\label{chp:objectives}
 
 Desenvolver um controlador do tipo MPC com restrições com modelo SPD utilizando
 observadores do tipo Kalman e implementá-lo utilizando e adaptando a plataforma
