--- a/chapter3.tex
+++ b/chapter3.tex
@@ -2,7 +2,7 @@
 % !TeX encoding = UTF-8 Unicode
 
 \chapter{Metodologia}%
-\label{sec:methodology}
+\label{chp:methodology}
 
 Para que a plataforma de controle possa se comunicar com o forno do laboratório
 de sinais e sistemas será necessário modificar o circuito de acionamento da
