--- a/chapter4.tex
+++ b/chapter4.tex
@@ -2,7 +2,7 @@
 % !TeX encoding = UTF-8 Unicode
 
 \chapter{Resultados Esperados}%
-\label{sec:expected-results}
+\label{chp:expected-results}
 
 Espera-se, com esse Trabalho de Conclusão de Curso, obter os seguintes
 resultados para o TCC1:
