--- a/chapter5.tex
+++ b/chapter5.tex
@@ -2,7 +2,7 @@
 % !TeX encoding = UTF-8 Unicode
 
 \chapter{Recursos Necessários}%
-\label{sec:needed-resources}
+\label{chp:needed-resources}
 
 Para o novo circuito de acionamento, que será inserido paralelo ao existente,
 serão necessários circuitos microcontrolados capazes de medir os valores de
