--- a/conclusion.tex
+++ b/conclusion.tex
@@ -2,7 +2,7 @@
 % !TeX encoding = UTF-8 Unicode
 
 \chapter{Cronograma}%
-\label{sec:chronogram}
+\label{chp:chronogram}
 
 A seguir está apresentado o cronograma de atividades a serem executadas.
 
