--- a/document.tex
+++ b/document.tex
@@ -36,9 +36,9 @@
   \pagestyle{cefetchapter}
   \pagenumbering{roman}
   \input{titlepage}
-  \input{dedicatoria}
-  \input{agradecimento}
-  \input{miss_brasil}
+  % \input{dedicatoria}
+  % \input{agradecimento}
+  % \input{miss_brasil}
   \input{abstract}
   \cleardoublepage{}
 
