Fix PDF metadata

--- a/document.tex
+++ b/document.tex
@@ -7,19 +7,10 @@
 \input{abbr}
 \selectlanguage{brazil}
 
-\title{Cerâmica e Polímeros}
-
-\titulo{\huge{Cerâmica e Polímeros}\\~\\\tiny{Materiais de Construção Mecânica}}
-\autor{Álan Crístoffer e Sousa}
-\data{\DTMDisplaydate{2017}{22}{1}{-1}}
-\instituicao{CEFET-MG}
-\local{Divinópolis}
-\date{Novembro de 2017}
-
 \hypersetup{
   unicode    = true,
-  pdftitle   = {Cerâmica e Polímeros},
-  pdfsubject = {Cerâmica e Polímeros},
+  pdftitle   = {Implementação de controlador MPC em um sistema a parâmetros distribuídos via subsistemas interconectados},
+  pdfsubject = {Implementação de controlador MPC em um sistema a parâmetros distribuídos via subsistemas interconectados},
   pdfauthor  = {Álan Crístoffer e Sousa}
 }
 
