Add Bibliography Revision

--- a/abbr.tex
+++ b/abbr.tex
@@ -22,6 +22,18 @@
     class = abbrev
 }
 
+\DeclareAcronym{DMC}{
+    short = DMC,
+    long  = Dynamic Matrix Control,
+    class = abbrev
+}
+
+\DeclareAcronym{IMC}{
+    short = IMC,
+    long  = Internal Mode Control,
+    class = abbrev
+}
+
 \DeclareAcronym{AT}{
     short = \(A'\),
     long  = Transposta de uma matriz,
