--- a/bibliothek.bib
+++ b/bibliothek.bib
@@ -1,3 +1,58 @@
+@article{article:black,
+	author = {H. S. Black},
+	title = {Stabilized Feedback Amplifiers},
+	journal = {Bell System Technical Journal},
+	volume = {13},
+	number = {1},
+	pages = {1-18},
+	year = {1927},
+	doi = {10.1002/j.1538-7305.1934.tb00652.x}
+}
+
+@article{article:morari,
+	author = {Morari, Manfred and Lee, Jay H},
+	doi = {https://doi.org/10.1016/S0098-1354(98)00301-9},
+	issn = {0098-1354},
+	journal = {Computers {\&} Chemical Engineering},
+	number = {4},
+	pages = {667--682},
+	title = {{Model predictive control: past, present and future}},
+	url = {http://www.sciencedirect.com/science/article/pii/S0098135498003019},
+	volume = {23},
+	year = {1999}
+}
+
+@article{article:bode,
+	author = {H. W. Bode},
+	title = {Feedback Amplifier Design},
+	journal = {Bell System Technical Journal},
+	volume = {19},
+	number = {1},
+	pages = {42},
+	year = {1940}
+}
+
+@article{article:cutler,
+	author = {C. R. Cutler and B. L. Ramaker},
+	title = {Dynamic matrix control - a computer control algorithm},
+	journal = {Joint Automatic Control Conference},
+	volume = {1},
+	year = {1980}
+}
+
+@article{article:lyapunov,
+	author = {Lyapunov, A.},
+	journal = {Annales de la Faculté des sciences de Toulouse : Mathématiques},
+	language = {fre},
+	pages = {203-474},
+	publisher = {GAUTHIER-VILLARS, IMPRIMEUR-EDITEUR ; ED. PRIVAT, IMPRIMEUR-LIBRAIRE},
+	title = {Problème général de la stabilité du mouvement},
+	url = {http://eudml.org/doc/72801},
+	volume = {9},
+	year = {1907},
+	note = {Tradução do artigo original publicado em 1892 an Comm. Soc. Math. Kharkow e reimpresso como Vol. 17 em Ann. Math Studies, Princeton University Press, Princeton, N.J., 1949.}
+}
+
 @article{article:nishikawa,
 	Author = {Y. Nishikawa and N. Sannomiya and T. Ohta and H. Tanaka},
 	Date-Added = {2017-11-05 21:50:11 +0000},
@@ -31,6 +86,15 @@
 	Volume = {21},
 	Url = {https://goo.gl/dY72Bj},
 	Year = {2005}}
+
+@book{book:bryson,
+   title =     {Applied Optimal Control: Optimization, Estimation and Control},
+   author =    {Jr. Arthur E. Bryson, Yu-Chi Ho},
+   publisher = {Taylor and Francis},
+   isbn =      {0891162283,9780891162285},
+   year =      {1975},
+   edition =   {Revised}
+}
 
 @book{book:ogata,
 	Author = {K. Ogata},
@@ -82,6 +146,14 @@
 	Title = {Estrat{\'e}gia de monitoramento de sistemas distribu{\'\i}dos baseada em observadores do tipo Kalman},
 	Url = {https://goo.gl/oDYCdB},
 	Year = {2017}}
+
+@masterthesis{masterthesis:zhang,
+	Author = {Zhang, Xi},
+	Pages = {86},
+	School = {TUDelft},
+	Title = {{Fast MPC Solvers for Systems with Hard Real-Time Constraints}},
+	Year = {2016}
+}
 
 @misc{misc:patwardhan,
 	Author = {S. C. Patwardhan},
