Fixes abbreviations as proposed by Valter and adds some new.

--- a/abbr.tex
+++ b/abbr.tex
@@ -4,9 +4,21 @@
 % probably a good idea for the nomenclature entries:
 \acsetup{first-style=short}
 
+\DeclareAcronym{LPV}{
+    short = LPV,
+    long  = {Variação linear de parâmetros, do inglês \textit{Linear Parameter Varying}},
+    class = abbrev
+}
+
 \DeclareAcronym{MPC}{
     short = MPC,
-    long  = Model Predictive Control,
+    long  = {Controle preditivo por modelo, do inglês \textit{Model Predictive Control}},
+    class = abbrev
+}
+
+\DeclareAcronym{DMPC}{
+    short = DMPC,
+    long  = {Controle preditivo por modelo discreto, do inglês \textit{Discrete Model Predictive Control}},
     class = abbrev
 }
 
@@ -24,13 +36,25 @@
 
 \DeclareAcronym{DMC}{
     short = DMC,
-    long  = Dynamic Matrix Control,
+    long  = {Controle Dinâmico por Matriz, do inglês \textit{Dynamic Matrix Control}},
     class = abbrev
 }
 
 \DeclareAcronym{IMC}{
     short = IMC,
-    long  = Internal Mode Control,
+    long  = {Controle por Modelo Interno, do inglês \textit{Internal Model Control}},
+    class = abbrev
+}
+
+\DeclareAcronym{EDP}{
+    short = EDP,
+    long  = Equação Diferencial Parcial,
+    class = abbrev
+}
+
+\DeclareAcronym{ARMAX}{
+    short = ARMAX,
+    long  = {Modelo autoregressivo de média variável com entradas exógenas, do inglês \textit{Autoregressive–moving-average with exogenous inputs model}},
     class = abbrev
 }
 
