Rewrites abstract and provides english translation.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,42 +1,83 @@
 % !TeX root = document.tex
 % !TeX encoding = UTF-8 Unicode
 
-\chapter*{Resumo}
-
 \begin{abstract}
-    Observadores permitem que o estado do sistema seja estimado dada sua saída.
-    Sistemas a parâmetros distribuídos (\ac{SPD}) podem ser utilizados com
-    observadores para recuperar informações ao longo do processo. Assim pode-se,
-    por exemplo, medir-se a temperatura na extremidade de um sólido e, através
-    desta, recuperar-se a temperatura em algum ponto no meio do sólido. Controle
-    preditivo baseado em modelo (\ac{MPC} --- \textit{model predictive control})
-    é uma técnica avançada de controle que lida com restrições. Ela já está
-    estabelecida em indústrias que lidam com processos multi-variáveis de
-    dinâmica lenta, especialmente na indústria petro-química. Ao combinar as
-    duas técnicas é possível não apenas controlar uma variável em um ponto
-    diferente daquele sendo medida, como também usar esta como uma restrição
-    física no controle de outro ponto. Isto permite o controle de variáveis que
-    são difíceis ou inviáveis de serem medidas diretamente. Embora ambas
-    técnicas sejam bem discutidas isoladamente, há poucos artigos onde as duas
-    são usadas em conjunto, o que sugere a existência de um campo a ser
-    explorado. Assim propõe-se o desenvolvimento e a implementação de um
-    controlador \ac{MPC} que utilize \ac{SPD} para realizar o controle de uma
-    variável estimada em um ponto intermediário. Para isso será utilizada a
-    planta presente no laboratório de sinais e sistemas. O modelo \ac{SPD}
-    utilizado será o desenvolvido por~\textcite{masterthesis:nelson}. A
-    implementação será feita utilizando os softwares \textit{Moirai} e
-    \textit{Lachesis}, desenvolvidos \textit{in loco}, o que irá requerer
-    modificações nos mesmos para funcionarem com as especificidades da planta.
-    Também será feita alteração na microeletrônica da planta, com a finalidade
-    de prover um meio alternativo para acionamento do forno. As modificações de
-    hardware e software, em conjunto, permitirão maior flexibilidade no uso da
-    planta, além de maior facilidade de uso. Pretende-se com este trabalho, que
-    envolve principalmente as áreas de controle e computação, aprofundar os
-    estudos do grupo de modelagem e controle de processos em \ac{SPD} com a
-    metodologia de controle proposta, bem como facilitar futuros trabalhos na
-    planta utilizada através do melhor desenvolvimento e teste da plataforma de
-    controle.
+	Controle preditivo baseado em modelo (\ac{MPC} --- \textit{model predictive
+	control}) é uma técnica avançada de controle que permite a inserção de
+	restrições no equacionamento do controlador. Seu objetivo é encontrar a
+	trajetória de controle ótima que respeite as restrições impostas, que podem
+	ser na amplitude ou variação do sinal de controle, de saída ou de um estado.
+	Ele já está estabelecida em indústrias que lidam com processos
+	multi-variáveis de dinâmica lenta, especialmente na indústria petro-química.
+	Sua formulação mais comum é utilizando modelos por espaço de estados, o que
+	requer que todos os estados sejam conhecidos. Como nem sempre é possível
+	medi-los, faz-se necessário o uso de observadores, que são técnicas de
+	estimar os estados do sistema a partir do modelo, sinal de controle e um
+	estado medido. Utilizando técnicas de modelagem pouco exploradas, como
+	sistemas a parâmetros distribuídos (\ac{SPD}), pode-se utilizar observadores
+	para estimar parâmetros do sistema em pontos de intenteresse onde não é
+	possível ou viável inserir sensores. Assim pode-se, por exemplo, medir-se a
+	temperatura na extremidade de um sólido e, através desta, recuperar-se a
+	temperatura em algum ponto no meio do sólido. Ao combinar as três técnicas é
+	possível controlar uma variável em um ponto diferente daquele sendo medido.
+	Assim propõe-se o desenvolvimento e implementação de um controlador \ac{MPC}
+	que utilize \ac{SPD} para realizar o controle de uma variável estimada em um
+	ponto intermediário. Para isso será utilizada a planta presente no
+	laboratório de sinais e sistemas. O modelo \ac{SPD} utilizado será o
+	desenvolvido por~\textcite{masterthesis:nelson}. A implementação será feita
+	utilizando os softwares \textit{Moirai} e \textit{Lachesis}, desenvolvidos
+	\textit{in loco}, que serão atualizados de forma a comunicar com o
+	\textit{hardware} da planta e receberá atualizações visando sua melhoria.
+	Também será feita alteração na microeletrônica da planta, com a finalidade
+	de prover um meio alternativo para acionamento do forno. Pretende-se com
+	este trabalho, que envolve principalmente as áreas de controle e computação,
+	aprofundar os estudos do grupo de modelagem e controle de processos
+	mecatrônicos em \ac{SPD} e \ac{MPC}, bem como facilitar futuros trabalhos
+	nesta e outras plantas, através do melhor desenvolvimento e teste da
+	plataforma de controle.
 \end{abstract}
 
 Palavras-chave: Controle preditivo por modelo, sistema a parâmetros
                 distribuídos, observador de Kalman
+
+\cleardoublepage{}
+
+\begin{otherlanguage}{english}
+	\begin{abstract}
+		Model predictive control (MPC) is an advanced control technique that
+		allows the insertion of constraints in the controller equation. Its
+		objective is to find the optimal control trajectory that respects the
+		constraints imposed, which can be in the amplitude or variation of the
+		control signal, output or a state. It is already established in
+		industries dealing with multi-variable processes of slow dynamics,
+		especially in the petrochemical industry. Its most common formulation is
+		to use state-space models, which requires all states to be known. As it
+		is not always possible to measure them, it is necessary to use
+		observers, which are techniques of estimating the states of the system
+		from the model, control signal and a measured state. Using less
+		exploited modeling techniques, such as distributed parameters systems
+		(DPS), observers can be used to estimate system parameters at points of
+		intent where it is not possible or feasible to insert sensors. Thus, for
+		example, one can measure the temperature at the end of a solid and
+		therethrough recover the temperature at some point in the middle of the
+		solid. By combining the three techniques it is possible to control a
+		variable at a point other than the one being measured. Thus it is
+		proposed the development and implementation of an MPC controller that
+		uses SPD to perform the control of an estimated variable in an
+		intermediate point. For this, the plant will be used in the signal and
+		system laboratory. The SPD model used will be the one developed
+		by~\textcite{masterthesis:nelson}. The implementation will be made using
+		the Moirai and Lachesis softwares, developed \textit{in loco}, which
+		will be updated in order to communicate with the plant hardware and
+		receive updates to improve it. Also, there will be made change in the
+		microelectronics of the plant, in order to provide an alternative means
+		to drive it. It is intended that this work, which mainly involves the
+		areas of control and computation, to deepen the studies of the modeling
+		and control group of mechatronic processes in DPS and MPC, as well as to
+		facilitate future works in this and other plants, through the best
+		development and test of the control platform.
+    \end{abstract}
+    
+    Keywords: Model predictive control, distributed parameters system, Kalman
+              filter
+\end{otherlanguage}
