--- a/titlepage.tex
+++ b/titlepage.tex
@@ -22,9 +22,9 @@
 \vspace*{2.5cm}
 
 \begin{center}
-    {\textsc Implementação de controlador MPC em um sistema a parâmetros
-             distribuídos via subsistemas interconectados} % alterar também
-             % mais abaixo.
+    \Large{\textsc{Implementação de controlador MPC em um sistema a parâmetros
+                  distribuídos via subsistemas interconectados}} % alterar
+                  % também mais abaixo.
 \end{center}
 
 \vspace*{4cm}
@@ -46,37 +46,37 @@
 %=========================================== CAPA 2 =============================================
 %================================================================================================
 
-\vspace*{1.2cm}
+\vspace*{1cm}
 
 \begin{center}
     \large Álan Crístoffer e Sousa
 \end{center}
 
-\vspace*{3.0cm}
+\vspace*{1.5cm}
 
 \begin{center}
-    {\textsc Implementação de controlador MPC em um sistema a parâmetros
-        distribuídos via subsistemas interconectados}  % alterar também mais acima.
+    \Large{\textsc{Implementação de controlador MPC em um sistema a parâmetros
+                  distribuídos via subsistemas interconectados}} % alterar
+                  % também mais acima.
 \end{center}
 
 \vspace*{1.5cm}
 
 \begin{flushright}
     \begin{minipage}{9.0cm}
-        Monografia de Trabalho de Conclusão de Curso apresentada ao
-        Colegiado de Graduação em Engenharia Mecatrônica
-        como  parte dos requisitos exigidos para a obtenção do título de
-        Engenhario Mecatrônico.\\
+        Monografia de Trabalho de Conclusão de Curso apresentada ao Colegiado de
+        Graduação em Engenharia Mecatrônica como  parte dos requisitos exigidos
+        para a obtenção do título de Engenhario Mecatrônico.\\
         Eixo de Formação: Modelagem e Controle de Processos.
 
         \vspace*{1cm}
 
-        Orientador: Prof.\@Dr.\@Valter Júnior de Souza Leite\\
-        % Co-orientador: Nome do co-orientador
+        Orientador: Prof.\ Dr.\ Valter Júnior de Souza Leite\\
+        Co-orientador: Prof.\ Dr.\ Ignacio Rubio Scola
     \end{minipage}
 \end{flushright}
 
-\vspace*{1.5cm}
+\vspace*{1cm}
 
 \epsfxsize=0.175\columnwidth{}
 \centerline{\epsffile{imgs/cefet.eps}} % Aqui poderia ser substituido por um logo do curso ou do campus
